--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src: url('Inter-Regular.woff2') format('woff2'),
        url('Inter-Regular.woff') format('woff');
   font-weight: 400;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: "Inter";
   src: url('subset-Inter-Bold.woff2') format('woff2'),
        url('subset-Inter-Bold.woff') format('woff');
   font-weight: 700;
