--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ html {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 2rem;
+  padding: 2rem 2rem 3.75rem;
   width: 27rem;
   background-color: white;
   border: 1px solid black;
@@ -46,6 +46,7 @@ html {
 
 .title {
   width: 23rem;
+  margin-bottom: 1rem;
 }
 
 .title h2 {
@@ -68,7 +69,7 @@ html {
 /* Основное уведомление */
 .notification {
   width: 23rem;
-  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
   padding: 0.62rem;
   background-color: #F0F1F3;
   border-radius: 4px;
@@ -129,6 +130,7 @@ html {
 }
 
 .content p {
+  margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -140,7 +142,6 @@ html {
 /* кнопки */
 .buttons {
   width: 23rem;
-  margin-bottom: 1.88rem;
   padding: 0;
 }
 
