--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@ html {
   color: #3E3E3E;
 }
 
+.title h2:hover {
+  color: #3E56AA;
+}
+
 .title img {
   position: absolute;
   right: 2.5rem;
@@ -139,6 +143,10 @@ html {
   color: #3E3E3E;
 }
 
+.content p:hover {
+  color: #3E56AA;
+}
+
 /* кнопки */
 .buttons {
   width: 23rem;
@@ -174,7 +182,7 @@ html {
   color: #3E56AA;
 }
 
-/* уточняющий класс для кнопки  one с позицией внизу */
+/* уточняющий класс для кнопки one с позицией внизу */
 .buttons .bottom {
   position: absolute;
   bottom: -30px;
