--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,6 @@ html {
 }
 
 .title {
-  width: 23rem;
   margin-bottom: 1rem;
 }
 
@@ -62,17 +61,21 @@ html {
   color: #3E56AA;
 }
 
-.title img {
+.btn--close {
   position: absolute;
-  right: 2.5rem;
-  top: 2.68rem;
+  right: 2rem;
+  top: 2.5rem;
+  background-color: white;
+  border: 0;
+}
+
+.btn--close img {
   width: 0.81rem;
   height: 0.81rem;
 }
 
 /* Основное уведомление */
 .notification {
-  width: 23rem;
   margin-bottom: 0.75rem;
   padding: 0.62rem;
   background-color: #F0F1F3;
@@ -82,9 +85,6 @@ html {
 .notification::before {
   display: inline-block;
   margin-right: 0.5rem;
-  content: url(../icons/icon2.png);
-  width: 1rem;
-  height: 1rem;
   vertical-align: middle;
 }
 
@@ -101,6 +101,10 @@ html {
 /* Уточняющие классы для уведомления */
 .notification_i {
   background-color: rgba(40, 73, 157, 0.09);
+}
+
+.notification_i::before {
+  content: url(../icons/icon2.png);
 }
 
 .notification_check {
@@ -129,8 +133,8 @@ html {
 
 /* контент модалки */
 .content {
-  width: 23rem;
   margin-bottom: 2rem;
+  padding: 0.19rem;
 }
 
 .content p {
@@ -148,12 +152,11 @@ html {
 }
 
 /* кнопки */
-.buttons {
-  width: 23rem;
+.buttons{
   padding: 0;
 }
 
-.buttons button {
+.btn{
   padding: 0.63rem 1.25rem;
   background-color: white;
   border: 0;
@@ -166,19 +169,30 @@ html {
   text-align: center;
 }
 
-.buttons .one{
-  margin-right: 0.75rem;
+.btn--primary{
   background-color: #3E56AA;
   color: white;
 }
 
-.buttons .two {
-  margin-right: 6.73rem;
+.buttons .btn--primary {
+  margin-right: 0.75rem;
+}
+
+.btn--secondary {
   background-color: rgba(0, 16, 61, 0.06);
   color: #2C2D2E;
 }
 
-.buttons .three {
+.btn--ptimaty {
+  color: #3E56AA;
+}
+
+.buttons .btn--secondary {
+  margin-right: 6.5rem;
+}
+
+.btn--link {
+  text-decoration: none;
   color: #3E56AA;
 }
 
